src/index.css
@import "https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap";

:root {
  /* Color */
  --color-primary: #a1321e;
  --color-secondary: #c66152;
  --color-tertiary: #1f5ea8;

  --color-bg-1: #ede9de;
  --color-bg-1-lighter: #fafafa88;
  --color-bg-2: #ebcf9f;
  --color-bg-2-darker: #d5972b;
  --color-bg-3: #eb967a;
  --color-bg-3-lighter: #eb967aa3;

  --color-dark: #692928;

  --gradient-bg: linear-gradient(
    to right bottom,
    var(--color-bg-1-lighter),
    var(--color-bg-2)
  );

  --gradient-title: linear-gradient(
    to top left,
    var(--color-bg-2-darker),
    var(--color-primary)
  );
}

* {
  margin: 0;
  padding: 0;
  box-sizing: inherit;
}

html {
  font-size: 62.5%;
  box-sizing: border-box;
}

body {
  background: var(--gradient-bg) fixed;
  font-family: "Nunito", sans-serif;
  color: var(--color-dark);
  font-weight: 400;
  line-height: 1.6;
  height: 100dvh;
}

.hidden {
  visibility: hidden;
  opacity: 0;
  pointer-events: none;
}

/* Media Queries */

@media (min-width: 156.25em) {
  html {
    font-size: 75%;
  }
}

/* Landscape tablet */
@media (max-width: 75em) {
  html {
    font-size: 56.25%;
  }
}

/* Tablets */
@media (max-width: 59em) {
  html {
    font-size: 50%;
  }
}

